[gd_scene load_steps=6 format=3 uid="uid://d2d3rhfm2e2hs"]

[ext_resource type="PackedScene" uid="uid://bqhmt6k7s7i06" path="res://scenes/window_object_wrapper.tscn" id="1_lnmm3"]
[ext_resource type="Script" path="res://scripts/code/get_window_specs.gd" id="2_5t2b6"]
[ext_resource type="Theme" uid="uid://dy5sr6nveqxyh" path="res://scenes/themes/toolMenuTheme.tres" id="3_tb0q4"]
[ext_resource type="Script" path="res://scripts/code/tool_menu.gd" id="4_m2u3w"]
[ext_resource type="PackedScene" uid="uid://2pdue4yw41do" path="res://scenes/window_types/basic_content_window.tscn" id="5_uwxqw"]

[node name="RigidBody2D" instance=ExtResource("1_lnmm3")]
collision_layer = 2
collision_mask = 4

[node name="Node2D" type="Node2D" parent="." index="1"]
script = ExtResource("2_5t2b6")

[node name="PanelContainer" type="PanelContainer" parent="Node2D" index="0" node_paths=PackedStringArray("noteContent", "imageLink", "animSelect", "messageList", "http")]
theme = ExtResource("3_tb0q4")
script = ExtResource("4_m2u3w")
noteContent = NodePath("VBoxContainer/TabContainer/pas rien/create/note/noteContent")
imageLink = NodePath("VBoxContainer/TabContainer/pas rien/create/image/imageLink")
animSelect = NodePath("VBoxContainer/TabContainer/pas rien/anim")
messageList = NodePath("VBoxContainer/TabContainer/pas rien/messages/messages")
contentWindowScene = ExtResource("5_uwxqw")
http = NodePath("HTTPRequest")

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/PanelContainer" index="0"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Node2D/PanelContainer/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Node2D/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2
current_tab = 1
clip_tabs = false

[node name="rien" type="Control" parent="Node2D/PanelContainer/VBoxContainer/TabContainer" index="1"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="pas rien" type="TabContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer" index="2"]
layout_mode = 2
current_tab = 3
clip_tabs = false
metadata/_tab_index = 1

[node name="anim" type="OptionButton" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien" index="1"]
visible = false
layout_mode = 2
selected = 3
allow_reselect = true
item_count = 4
popup/item_0/text = "brb"
popup/item_1/text = "starting"
popup/item_1/id = 1
popup/item_2/text = "zoom"
popup/item_2/id = 2
popup/item_3/text = "back"
popup/item_3/id = 3
metadata/_tab_index = 0

[node name="create" type="VBoxContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien" index="2"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="note" type="HBoxContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create" index="0"]
layout_mode = 2

[node name="noteContent" type="LineEdit" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/note" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "note"
clear_button_enabled = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="noteButton" type="Button" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/note" index="1"]
layout_mode = 2
text = "send"

[node name="image" type="HBoxContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create" index="1"]
layout_mode = 2

[node name="imageLink" type="LineEdit" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/image" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "link to image"
clear_button_enabled = true

[node name="imageButton" type="Button" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/image" index="1"]
layout_mode = 2
text = "send"

[node name="options" type="VBoxContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien" index="3"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="clearWindows" type="Button" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options" index="0"]
layout_mode = 2
text = "Clear all windows"

[node name="windowEnable" type="CheckButton" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options" index="1"]
layout_mode = 2
button_pressed = true
text = "windows can appear"

[node name="JoelEmoteEnable" type="CheckButton" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options" index="2"]
layout_mode = 2
button_pressed = true
text = "Joel can appear"

[node name="faceColor" type="ColorPickerButton" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options" index="3"]
layout_mode = 2
text = "face color"
color = Color(0.305882, 0.435294, 1, 1)
edit_alpha = false

[node name="messages" type="ScrollContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien" index="4"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_tab_index = 3

[node name="messages" type="VBoxContainer" parent="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/messages" index="0"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="Node2D/PanelContainer" index="1"]

[connection signal="minimum_size_changed" from="Node2D/PanelContainer" to="Node2D/PanelContainer" method="_on_minimum_size_changed"]
[connection signal="item_selected" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/anim" to="Node2D/PanelContainer" method="_on_anim_item_selected"]
[connection signal="pressed" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/note/noteButton" to="Node2D/PanelContainer" method="_on_note_button_pressed"]
[connection signal="pressed" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/create/image/imageButton" to="Node2D/PanelContainer" method="_on_image_button_pressed"]
[connection signal="pressed" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options/clearWindows" to="Node2D/PanelContainer" method="_on_clear_windows_pressed"]
[connection signal="toggled" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options/windowEnable" to="Node2D/PanelContainer" method="_on_window_enable_toggled"]
[connection signal="toggled" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options/JoelEmoteEnable" to="Node2D/PanelContainer" method="_on_joel_emote_enable_toggled"]
[connection signal="color_changed" from="Node2D/PanelContainer/VBoxContainer/TabContainer/pas rien/options/faceColor" to="Node2D/PanelContainer" method="_on_face_color_color_changed"]
